@@ -14,6 +14,7 @@ Highlights of this release include:
     (Flesh this out & update the userguide accordingly).
   + Changed PowerPC version of VM_Assembler.java to uniformly use PowerPC 
     mnemonics for the instructions. 
+  + The OutOfMemoryError exception is now thrown by the GC system.
 
 Other notes:
   + Changes to configuration files:
